# project_15_flask_htmx

./: README.md  app.py  csrf_protection.py  pyproject.toml  requirements.txt
rest/clicker/: __init__.py  crud.py  views.py
rest/examples/: __init__.py  views.py
rest/index/: __init__.py  views.py
rest/products/: __init__.py  crud.py  form.py  views.py
static/css/: style.css
templates/: base.html  index.html
templates/clicker/: index.html
templates/clicker/components/: click_count.html  clicker_body.html
templates/components/: loading.html
templates/examples/: index.html
templates/examples/components/: footer.html
templates/examples/hover/: hover.html
templates/examples/ping/: ping.html
templates/macros/: errors_list.html
templates/products/: base.html  details.html  list.html
templates/products/components/: delete-button.html  delete-button_details.html  form.html  form_and_product-oob.html  form_body.html  form_update.html  pr-cycle.html  pr-cycle_reveal.html  product-oob.html  product.html  products_list.html  products_list_reveal.html
