[tool.poetry]
name = "project-15-flask-htmx"
version = "0.1.0"
description = ""
authors = ["Xalva <maasania@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
black = "^24.4.2"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
